2001-03-29  Per Bothner  <per@bothner.com>

	* CodeAttr.java (emitTryStart):  If the stack needs to be saved,
	do so before setting the TryState's start_pc.
	Fixes bug reported by Bob Bane <bane@gst.com>.

2001-03-08  Per Bothner  <per@bothner.com>

	* ClassType.java (getSuperclass):  Call getReflectClass if needed.

	* ClassType.java (implementsInterface):  New method.
	(compare):  Use implementsInterface to compare interfaces.

2001-02-26  Per Bothner  <per@bothner.com>

	* ClassType.java (doFixups):  Move method fixups to Method, CodeAttr.
	* CodeAttr.java (assignConstants):  Handle CodeFragments, labels here.
	* Method.java (assign_constants):  REname to assignConstants.

2000-11-21  Brain R. Lewis <brlewis@users.sourceforge.net>

	* ArrayClassLoader.java:  Handle custom classloader by using
	Class.forName() instead of findSystemClass().
	* ZipLoader.java:  Likewise.

2000-10-09  Per Bothner  <per@bothner.com>

	* ObjectType.java (setExisting):  New method.
	* Type.java (getType):  Don't try to load reflectClass yet.

	* ObjectType.java (getInternalName):  New method.
	(getNameOrSignature):  Removed, replaced by getInternalName.
	(getReflectClass):  Update to use getInternalName.
	* ArrayType.java (getInternalName):  New method, replaces ...
	(getNameOrSignature):  Removed, replaced by getInternalName.
	* ConstantPool.java (addClass):  Update to use getInternalName.

	* ObjectType.java (coerceFromObject):  Minor optimization.

2000-08-23  Daniel Bonniot <bonniot@cma.ensmp.fr>

	* CodeAttr.java (emitDup, emitDupX):  New methods.

2000-08-16  Per Bothner  <per@bothner.com>

	* CodeAttr.java (addParamLocals):  New method.
	* Method.java (init_param_slots):  Use CodeAttr's new addParamLocals.

	* Type.java (make):  If an existing type has same name but different
	reflectClass (i.e. different ClassLoader), treat it as different type.

2000-06-10  Per Bothner  <per@bothner.com>

	* Type.java (nullType):  New static field.